-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.4.3, 6.8.1
-
None
-
8928b0fbb (dev), 55a46ec00 (6.9), d490a1ac0 (6.8)
#include <QCommandLineParser> int main() { QCommandLineParser p; p.addPositionalArgument("test", "This is a test", "<test!>"); qDebug().noquote() << p.helpText(); return 0; }
Expected output (something like this):
Usage: <executable_name> <test!> Arguments: test This is a test
Actual output:
Usage: <executable_name> <test!> Arguments: t This is a test e s t
| For Gerrit Dashboard: QTBUG-131716 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 607507,3 | QCommandLineParser: include the positional arguments' sizes in --help | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 613178,2 | QCommandLineParser: include the positional arguments' sizes in --help | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 613231,2 | QCommandLineParser: include the positional arguments' sizes in --help | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |